<resources>
    <string name="app_name">Flipo\'s Express</string>
    <string name="username">Nombre de usuario</string>
    <string name="singin">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="cost_message">Costo del pedido: {}</string>
    <string name="order_cost_message">Costo del domicilio: {}</string>
    <string name="description">Descripción del domicilio</string>
    <string name="save">Guardar</string>
    <string name="date">Fecha</string>
    <string name="image">Image</string>
    <string name="loading">¡Ya casi acabamos!</string>
    <string name="message_add">Aquí debes escribir los datos de tu domicilio para llevar un contról</string>
    <string name="update">Actualizar</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_order">Añadir domicilio</string>
    <string name="title_order_active">Domicilios actuales</string>
    <string name="title_order_not_active">Domicilio finalizado</string>
    <string name="finish">Finalizar</string>
    <string name="error">¡Error!</string>
    <string name="ok">Listo</string>
    <string name="wait_please">Cargando, por favor espera…</string>
    <string name="list_empty">¡Ups!, no encontramos nada.</string>
    <string name="show_history">Ver historial de ordenes</string>
    <string name="cost">¿Cuánto costó el domicilio?</string>
    <string name="order_cost">¿Cuánto cobraras por el domicilio?</string>
    <string name="add_order_message">¡Vamos a agregar un domicilio!</string>
    <string name="total_price">Este domicilio es de {}</string>
    <string name="date_order">Este domicilio fue el {}</string>
    <string name="title_order_inactive">Historial de domicilios</string>
    <string name="title_confirm_dialog">¡Hola!</string>
    <string name="message_confirm_dialog">¿Estas seguro de querer hacer esto?</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="contentDescription">Descripción de la imagen</string>
    <string name="cancel_order">Cancelar domicilio</string>
    <string name="editl_order">Editar domicilio</string>
    <string name="title_order_type">Título del tipo de domicilio</string>
</resources>