<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        style="@style/PanelTheme.Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewTheme.Title.PrimaryDark.H1"
            android:text="@string/title_order_active" />

        <TextView
            android:id="@+id/tvCost"
            style="@style/TextViewTheme.Text.Black.h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:text="@string/cost_message"
            app:drawableStartCompat="@drawable/ic_baseline_monetization_on_24" />

        <TextView
            android:id="@+id/tvOrderCost"
            style="@style/TextViewTheme.Text.Black.h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCost"
            android:text="@string/order_cost_message"
            app:drawableStartCompat="@drawable/ic_baseline_monetization_on_24" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextViewTheme.Text.Black.h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOrderCost"
            android:text="@string/description"
            app:drawableStartCompat="@drawable/ic_baseline_list_alt_24" />

    </RelativeLayout>

</RelativeLayout>